--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,9 @@ requirements:
     - cross-r-base {{ r_base }}  # [build_platform != target_platform]
     - r-r6                       # [build_platform != target_platform]
     - {{ compiler('rust') }}
-    - {{ compiler('c') }}
+    - {{ compiler('c') }}  # [not win]
     - {{ stdlib("c") }}
+    - {{ compiler('r_clang') }}  # [win]
     - {{ posix }}filesystem        # [win]
     - {{ posix }}sed               # [win]
     - {{ posix }}grep              # [win]
